--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <div class="arrow_green"><img src="img/arrow_green.jpg" alt=""></div>
                 </div>
                 <div id="divocultamuestra" style="display:none;" class="beneficios_box_content01">
-                  <p class="beneficios_text beneficios_text_colorgray">Revisamos las redes<br> en detalle dejando<br> todo en norma<br> con la <strong>SEC</strong>.</p>
+                  <p class="beneficios_text beneficios_text_colorgray">Revisamos las redes de tu hogar en detalle quedando certificadas según normativa <strong>SEC</strong>.</p>
                   
                 </div>
               </div>
