--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="bene_concepto">
               <div class="bene_concepto_img"><img src="img/ico-06.jpg" alt=""></div>
               <div class="bene_concepto-title">Club Metrogas</div>
-              <div class="bene_concepto_text MT30">Descuentos beneficios y canjes por parte de Metrogas.</div>
+              <div class="bene_concepto_text MT30">Descuentos, beneficios y canjes por parte de Metrogas.</div>
             </div>
           </div>
           <div class="col-md-3">
